Revert "fix: readability styling issues"
This reverts commit 5f204f85f47321e60338c0e96be79ed6fddb9dcd.

--- a/src/assets/scss/playlist.scss
+++ b/src/assets/scss/playlist.scss
@@ -158,9 +158,6 @@
     border-width: 0px;
     margin: 0em 2em;
     margin-bottom: 1em;
-    &::placeholder {
-      opacity: 0.5;
-    }
     @media (max-width: 900px) {
       margin: 0em 0em;
       margin-bottom: 1em;
